@@ -96,9 +96,7 @@ NOTE: sorry, this is very raw :)
  ## scale doesn't always work (no clue why... multiple time sig changes? midi imported? multiple docs open?) (can't reproduce)
  ## can't undo 'paste'
  ## crash when emptying tempo in control view [reported, not tested] 
-
-+ score editor : add a note... give it an accidental sign. Move the note up or down with arrow key. Undo - accidental sign is gone.
-
+ 
 - setting sharp/flat sign manually sometimes doesn't work (when it's possible to display the note on a level with no sign)
 
 - when wait dialog appears, you can still edit tracks and do operations that may be harmful to current process.
